# vsbotfresh

./: .gitignore  CONTRIBUTING.md  CUSTOM_INSTRUCTIONS.md  INTERFACES.md  README.md  VERSIONING.md  pyproject.toml
.github/workflows/: ci.yml  pages-status.yml  release.yml
config/: objectives.json  settings.toml  wiki_progression.json  wiki_sources.json
launchd/: com.vsbotfresh.game-input.plist.template  com.vsbotfresh.live-signal.plist.template  com.vsbotfresh.orchestrator.plist.template
scripts/: build_sim_core.sh  install_launch_agent.sh  install_rust_local.sh  load_launch_agents.sh  open_live_status_pane.sh  overseer_update_5m.sh  render_live_status.py  run_tests.sh  start_game_input_daemon.sh  start_live_signal_daemon.sh  start_unattended.sh  stop_game_input_daemon.sh  stop_live_signal_daemon.sh  stop_unattended.sh  unload_launch_agents.sh  watch_autotune_shadow.sh  watch_live_status.sh
scripts/github/: apply_branch_protection.sh
scripts/release/: semver_bump.py
sim-core/src/: main.rs
site/: index.html
src/vs_overseer/: __init__.py  api.py  cli.py  config.py  dashboard.py  game_input.py  live_runner.py  live_signal.py  memory_backend.py  models.py  objective_graph.py  objective_planner.py  (+8 more)
tests/: test_config_paths.py  test_game_input.py  test_integration_loop.py  test_live_runner.py  test_live_signal.py  test_memory_backend_signal.py  test_objective_graph.py  test_objective_planner.py  test_orchestrator_objective_signals.py  test_promotion.py  test_replay_ocr_e2e.py  test_runtime_autotuner.py  test_safety.py  test_scoring.py  test_wiki_sync.py
(+1 files in other folders)
