[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsbotfresh"
version = "0.1.0"
description = "Fresh unattended Vampire Survivors objective-speed bot"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Local Automation" }]
dependencies = []

[project.scripts]
vsbotfresh = "vs_overseer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
